# driver

./: .gitignore  README.md  VoiceList.txt  build.gradle  gradle.properties  local.properties  settings.gradle  v5.004更新日志  打包配置.md  更新日志  混淆配置上手说明.md
component/: CMakeLists.txt  README.md  build.gradle
component/src/androidTest/java/com/easymi/component/: ExampleInstrumentedTest.java
component/src/main/: AndroidManifest.xml
component/src/main/aidl/com/easymi/component/: ILocationHelperServiceAIDL.aidl  ILocationServiceAIDL.aidl
component/src/main/cpp/: cat-lib.cpp  loader-lib.cpp  ps-lib.cpp
component/src/main/java/com/easymi/component/: BusOrderStatus.java  ComponentService.java  Config.java  DJOrderStatus.java  EmployStatus.java  GWOrderStatus.java  Glide4Engine.java  Host.java  LocChangeListener.java  LocService.java  PCOrderStatus.java  WebActivity.java  ZCOrderStatus.java  ZXOrderStatus.java
component/src/main/java/com/easymi/component/activity/: CityActivity.java  NaviActivity.java  PlaceActivity.java  SettingActivity.java  WebActivity.java
component/src/main/java/com/easymi/component/adapter/: PlaceAdapter.java
component/src/main/java/com/easymi/component/app/: AbsDataProvider.java  ActManager.java  ActivityManager.java  AutoCheck.java  WebActivity.java  XApp.java
component/src/main/java/com/easymi/component/base/: RxBaseActivity.java  RxBaseActivity2.java  RxBaseFragment.java  RxLazyFragment.java  RxPayActivity.java
component/src/main/java/com/easymi/component/cat/: Cat.java  DumpObserver.java  DumpService.java  OnFileListener.java
component/src/main/java/com/easymi/component/db/: SqliteHelper.java
component/src/main/java/com/easymi/component/decoration/: Sticky.java  (+4 more)
component/src/main/res/anim/: dialog_center_enter.xml  dialog_center_exit.xml
component/src/main/res/drawable/: corners_light_blue_4dp.xml  corners_stroke_22dp.xml  corners_yellow_22dp.xml  divider.xml  ic_empty.xml  ic_net_error.xml  shape_btn_4dp_bg.xml  shape_btn_gray_4dp_bg.xml  share_img_bg.xml
component/src/main/res/layout/: activity_city.xml  activity_navi.xml  activity_place.xml  activity_register_and_recognize.xml  activity_setting.xml  activity_web.xml  bar_layout.xml  com_dialog_pay.xml  cus_progress_dialog.xml  cus_progress_dialog_1.xml  dialog_choose_image.xml  dialog_sure_base.xml  err_layout.xml  item_phone_item.xml  item_phone_title.xml  layout_footer_view.xml  layout_keyboard_containor.xml  layout_view_slide_to_unlock.xml  lib_layout_empty.xml  lib_layout_error.xml  lib_layout_time.xml  lib_rv_foot.xml  my_layout_bottom.xml  p_layout_load_more.xml  place_item.xml  rent_dialog_date.xml  swipeback_base.xml  swipeback_layout.xml  time_picker_dialog.xml
component/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
component/src/main/res/values-en/: strings.xml
component/src/main/res/values-v19/: styles.xml
component/src/main/res/values-zh-rHK/: arrays.xml  strings.xml
component/src/main/res/values-zh-rTW/: arrays.xml  strings.xml
component/src/test/java/com/easymi/component/: ExampleUnitTest.java
(+1853 files in other folders)
